--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "dotenv": "^16.0.2",
         "express": "^4.16.4",
         "hbs": "^4.0.1",
         "request": "^2.88.0"
